chandeliers-lus/tests/fail/ui/causality/redef-const.stderr
error: Global `X` is declared twice
 --> tests/fail/ui/causality/redef-const.rs:3:5
  |
3 |     const X : float = 0.0;
  |     ^^^^^^^^^^^^^^^^^^^^^
